Release v1.2.1
